--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "leva": "^0.9.35",
     "playroomkit": "^0.0.36",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "three": "0.153.0",
     "three-stdlib": "^2.27.1"
